# extract-tracked

./: ChangeLog.md  LICENSE  README.md  extract-tracked.cabal  stack.yaml
lib/: Album.hs  Chapters.hs  DescriptionParser.hs  FetchMetadata.hs
src/: extract-tracked.hs  fetch-description.hs
